--- a/src/main.scss
+++ b/src/main.scss
@@ -66,7 +66,7 @@ h3[id] a::before {
 }
 
 
-p + * {
+section > * + * {
 	margin-top: 1em/$ratio;
 }
 
